--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,9 @@ body{
     background-image: url("https://wallpaperplay.com/walls/full/1/a/1/75448.jpg");
     margin: 0 auto;
 }
- /* .container{
+ .container{
     width: 960px;
-} */
+}
 
 header{
     background-color: white;
@@ -25,12 +25,12 @@ header{
     margin: 0 auto;
     margin
 }
-/* .nav justify-content-end{
+a {
     text-decoration: none;
     color: #cccccc;
     margin-left: 20px;
     font-size: 1;
-}*/
+}
 
 
 #h1{
