--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,6 @@ header{
     border-bottom: solid 2px pink;
     height: 67px;
     margin: 0 auto;
-    margin
 }
 a {
     text-decoration: none;
@@ -34,28 +33,27 @@ a {
 
 
 #h1{
-    background-color: #4aaaa5;
+    background-color:brown;
     color: white;
     margin: 0;
-    float: left;
     padding: 15px 20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 h2{
     margin: 0;
-    color: teal;
+    color: brown;
     border-bottom:  1px solid gray;
     padding-bottom: 30px;
     margin-bottom: 30px;
 }
 
 section{
-    background-color: white;
+    background-color: whitesmoke;
     width: 960px;
     max-height: 650px;
     margin: 0 auto;
-    border: solid 1px teal;
+    border: solid 1px brown;
     line-height: 5mm;
     font-family: Arial, Helvetica, sans-serif;
     
