--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ html{
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url("https://wallpaperplay.com/walls/full/1/a/1/75448.jpg");
+    background-image: url("https://thumbs.dreamstime.com/z/sakura-cherry-tree-background-illustration-beautiful-landscape-36004634.jpg");
     margin: 0 auto;
 }
  .container{
@@ -30,8 +30,14 @@ a {
     margin-left: 20px;
     font-size: 1;
 }
+.text{
+    padding-top: 70px;
+}
+   
 
-
+.headerDiv{
+    width: 100%;
+}
 #h1{
     background-color:brown;
     color: white;
