--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,10 +23,11 @@ header{
     border-bottom: solid 2px pink;
     height: 67px;
     margin: 0 auto;
+
 }
 a {
     text-decoration: none;
-    color: #cccccc;
+    color: sienna;
     margin-left: 20px;
     font-size: 1;
 }
@@ -39,21 +40,24 @@ a {
     width: 100%;
 }
 #h1{
-    background-color:brown;
+    background-color:sienna;
     color: white;
     margin: 0;
     padding: 15px 20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 900;
+    font-size: 26px;
 }
 
 h2{
     margin: 0;
     color: brown;
     border-bottom:  1px solid gray;
+    padding-top: 20px;
     padding-bottom: 30px;
     margin-bottom: 30px;
 }
-
+/* 
 section{
     background-color: whitesmoke;
     width: 960px;
@@ -63,4 +67,4 @@ section{
     line-height: 5mm;
     font-family: Arial, Helvetica, sans-serif;
     
-}
+} */
