--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ a {
 }
 .text{
     padding-top: 70px;
+    font-weight: bold;
 }
    
 
@@ -45,7 +46,7 @@ a {
     margin: 0;
     padding: 15px 20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 900;
+    font-weight: bold;
     font-size: 26px;
 }
 
@@ -57,14 +58,4 @@ h2{
     padding-bottom: 30px;
     margin-bottom: 30px;
 }
-/* 
-section{
-    background-color: whitesmoke;
-    width: 960px;
-    max-height: 650px;
-    margin: 0 auto;
-    border: solid 1px brown;
-    line-height: 5mm;
-    font-family: Arial, Helvetica, sans-serif;
-    
-} */
+
