--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,8 +32,11 @@ a {
     font-size: 1;
 }
 .text{
-    padding-top: 70px;
+    
     font-weight: bold;
+    font-family: 'Marck Script', cursive;
+    font-size: 18px;
+
 }
    
 
@@ -43,7 +46,7 @@ a {
 #h1{
     background-color:sienna;
     color: white;
-    margin: 0;
+    margin: auto;
     padding: 15px 20px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
@@ -54,8 +57,6 @@ h2{
     margin: 0;
     color: brown;
     border-bottom:  1px solid gray;
-    padding-top: 20px;
-    padding-bottom: 30px;
     margin-bottom: 30px;
 }
 
