--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ html{
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url("https://thumbs.dreamstime.com/z/sakura-cherry-tree-background-illustration-beautiful-landscape-36004634.jpg");
+    background-image: url("../Images/Cherry-blossom.jpg");
     margin: 0 auto;
 }
  .container{
