--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,12 +13,12 @@ body{
     margin: 0 auto;
 }
  .container{
-    width: 960px;
+    width: 980px;
 }
 
 header{
     background-color: white;
-    width: 960px;
+    width: 1000px;
     background-color: white;
     border-bottom: solid 2px pink;
     height: 67px;
@@ -37,6 +37,7 @@ a {
     font-family: 'Marck Script', cursive;
     font-size: 18px;
     padding-top: 70px;
+    margin-top: -30px;
 }
 .headerDiv{
     width: 100%;
@@ -46,20 +47,15 @@ a {
     color: white;
     margin: auto;
     padding: 15px 20px;
+    margin-bottom: 50px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
     font-size: 26px;
 }
 
-h2{
-    margin: 0;
-    color: brown;
-    border-bottom:  1px solid gray;
-    margin-bottom: 30px;
-}
 
 .card{
-    width: 960px;
+    width: 500px;
 }
 .form{
     margin-top: 80px;
