--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,11 +52,13 @@ a {
     font-weight: bold;
     font-size: 26px;
 }
-
+p{
+    text-indent: 10px;
+}
 
 .card{
     width: 500px;
 }
 .form{
-    margin-top: 80px;
+    margin-top: 50px;
 }
