--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,3 @@
-/* *{
-    box-sizing: border-box;
-} */
 
 html{
     height: 100%;
@@ -16,15 +13,14 @@ body{
     width: 980px;
 }
 
-header{
+/* header{
     background-color: white;
     width: 1000px;
     background-color: white;
     border-bottom: solid 2px pink;
     height: 67px;
     margin: 0 auto;
-
-}
+} */
 a {
     text-decoration: none;
     color: sienna;
@@ -32,16 +28,13 @@ a {
     font-size: 1;
 }
 .text{
-    
     font-weight: bold;
     font-family: 'Marck Script', cursive;
     font-size: 18px;
     padding-top: 70px;
     margin-top: -30px;
 }
-.headerDiv{
-    width: 100%;
-}
+
 #h1{
     background-color:sienna;
     color: white;
@@ -63,9 +56,4 @@ p{
     margin-top: 50px;
 }
 
-/* @ audio{
-    .Pic:hover {
-        b
-      }
-    
-} */
+
