--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,21 @@ a {
     font-weight: bold;
     font-size: 26px;
 }
+
+h2{
+    color: sienna;
+    margin: auto;
+}
+h3{
+    color: sienna;
+    margin: auto;
+    margin-left: -80px;
+}
+h4{
+    color: sienna;
+    margin: auto;
+    margin-top: 20px;
+}
 p{
     text-indent: 10px;
 }
