--- a/assets/css/newStyle.css
+++ b/assets/css/newStyle.css
@@ -1,3 +1,24 @@
+.container {
+    width: 100%;
+    height: 100%;
+}
+
 .nav {
+    background-color: black;
+    padding-right: 5px;
+    height: 900px;
+}
+.frontPic {
+    background-image: url("https://cdn.pixabay.com/photo/2017/10/13/16/06/girl-2848057_960_720.jpg");
+    padding-left: 5px;
+    height: 400px;
+}
+.mainPage{
+    float: left;
+}
+.bioText {
+    color: white;
+}
+body {
     background-color: black;
 }
