--- a/assets/css/newStyle.css
+++ b/assets/css/newStyle.css
@@ -1,6 +1,6 @@
 .container {
     width: 100%;
-    height: 100%;
+    height: 900px;
 }
 
 .nav {
@@ -13,12 +13,17 @@
     padding-left: 5px;
     height: 400px;
 }
-.mainPage{
+/* .mainPage{
     float: left;
-}
+} */
 .bioText {
     color: white;
 }
 body {
-    background-color: black;
+    background-image: linear-gradient(black, yellow);
+}
+
+.card {
+    height: 40%;
+
 }
